--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,11 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build/*
+dist/*
+
+# Test Files
+test*
 
 # Dependency directories
 node_modules
