Add code to behave in production or development. It will look at NODE_ENV and perform normally or only against a test file depending on whether you are in production or development environment.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dailytext",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "Loads the Daily Text from WOL site and outputs text.",
   "main": "dailytext.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node dailytext",
+    "test": "NODE_ENV=development node dailytext"
   },
   "author": "Josh Curtiss <josh@curtiss.me>",
   "license": "GPL-3.0",
